Make sure the colon doesn't wrap with lots of tags

--- a/ui-v2/app/styles/routes/dc/service/index.scss
+++ b/ui-v2/app/styles/routes/dc/service/index.scss
@@ -4,6 +4,5 @@ html.template-service.template-show main dl {
 }
 html.template-service.template-show main dt::after {
   content: ':';
-  display: inline-block;
   margin-right: 0.2em;
 }
